# Nexus-AI

./: .replit  Doc.md  README.md  pnpm-lock.yaml  pyproject.toml  render.yaml
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/chat-frontend/: index.html  package.json
artifacts/chat-frontend/.replit-artifact/: artifact.toml
artifacts/chat-frontend/src/: App.tsx  index.css
artifacts/chat-frontend/src/pages/: chat.tsx  login.tsx  register.tsx
backend/: manage.py  requirements.txt
backend/chatapi/: settings.py  urls.py  wsgi.py
backend/chats/: admin.py  models.py  serializers.py  urls.py  urls_detail.py  urls_root.py  views.py
backend/chats/migrations/: 0001_initial.py  0002_initial.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
lib/api-spec/: openapi.yaml
